Test transaction roll-back for deleting quiz